@@ -50,8 +50,8 @@ public class CredentialConfigurationServiceImplTest {
     @Before
     public void setup() {
         Map<String, List<List<String>>> keyAliasMapper = new HashMap<>();
-        keyAliasMapper.put("Ed25519Signature2020", Arrays.asList(
-                Arrays.asList("TEST2019", "TEST2019-REF")));
+        keyAliasMapper.put("Ed25519Signature2020", List.of(
+                List.of("TEST2019", "TEST2019-REF")));
         keyAliasMapper.put("RsaSignature2018", List.of());
 
         MockitoAnnotations.openMocks(this);
@@ -78,9 +78,12 @@ public class CredentialConfigurationServiceImplTest {
         credentialConfigurationDTO.setCredentialConfigKeyId("test-credential");
         credentialConfigurationDTO.setMetaDataDisplay(List.of());
         credentialConfigurationDTO.setVcTemplate("test_template");
-        credentialConfigurationDTO.setCredentialFormat("test_vc");
+        credentialConfigurationDTO.setCredentialFormat("ldp_vc");
         credentialConfigurationDTO.setContextURLs(List.of("https://www.w3.org/2018/credentials/v1"));
         credentialConfigurationDTO.setCredentialTypes(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"));
+        credentialConfigurationDTO.setSignatureCryptoSuite("Ed25519Signature2020");
+        credentialConfigurationDTO.setKeyManagerAppId("TEST2019");
+        credentialConfigurationDTO.setKeyManagerRefId("TEST2019-REF");
         credentialConfigurationDTO.setCredentialSubjectDefinition(Map.of("name", new CredentialSubjectParametersDTO(List.of(new CredentialSubjectParametersDTO.Display("Full Name", "en")))));
 
         ReflectionTestUtils.setField(credentialConfigurationService, "credentialIssuer", "http://example.com/");
@@ -96,6 +99,9 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void addNewCredentialConfig_Success() {
+        credentialConfigurationDTO.setContextURLs(List.of("https://www.w3.org/2018/credentials/v1"));
+        credentialConfigurationDTO.setCredentialTypes(List.of("VerifiableCredential", "TestVerifiableCredential"));
+        credentialConfigurationDTO.setSignatureCryptoSuite("Ed25519Signature2020");
         when(credentialConfigMapper.toEntity(any(CredentialConfigurationDTO.class))).thenReturn(credentialConfig);
         when(credentialConfigRepository.save(any(CredentialConfig.class))).thenReturn(credentialConfig);
 
@@ -114,8 +120,6 @@ public class CredentialConfigurationServiceImplTest {
         CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
         dto.setCredentialFormat("ldp_vc");
         dto.setVcTemplate(null); // or ""
-
-        when(credentialConfigMapper.toEntity(any(CredentialConfigurationDTO.class))).thenReturn(new CredentialConfig());
 
         // Act & Assert
         CertifyException exception = assertThrows(CertifyException.class, () ->
@@ -139,7 +143,7 @@ public class CredentialConfigurationServiceImplTest {
         Assert.assertEquals("test_template", credentialConfigurationDTOResponse.getVcTemplate());
         Assert.assertEquals(List.of("https://www.w3.org/2018/credentials/v1"), credentialConfigurationDTOResponse.getContextURLs());
         Assert.assertEquals(Arrays.asList("VerifiableCredential", "TestVerifiableCredential"), credentialConfigurationDTOResponse.getCredentialTypes());
-        Assert.assertEquals("test_vc", credentialConfigurationDTOResponse.getCredentialFormat());
+        Assert.assertEquals("ldp_vc", credentialConfigurationDTOResponse.getCredentialFormat());
     }
 
     @Test
@@ -166,10 +170,9 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void updateExistingCredentialConfig_Success() {
-
         CredentialConfig mockCredentialConfig = new CredentialConfig();
         String expectedId = "test-credential";
-        String expectedStatus = "active"; // This status should be what you expect after the "update"
+        String expectedStatus = "active";
         mockCredentialConfig.setConfigId("12345678");
         mockCredentialConfig.setCredentialConfigKeyId("test-credential");
         mockCredentialConfig.setStatus(expectedStatus);
@@ -183,12 +186,21 @@ public class CredentialConfigurationServiceImplTest {
         when(credentialConfigRepository.findByCredentialConfigKeyId(eq(expectedId))).thenReturn(optionalConfig);
 
 
-        CredentialConfigurationDTO mockDto = new CredentialConfigurationDTO(); // Dummy DTO for the mapper call
+        CredentialConfigurationDTO mockDto = new CredentialConfigurationDTO();
+
+        // Create a valid DTO for validation that will be returned by toDto
+        CredentialConfigurationDTO validationDto = new CredentialConfigurationDTO();
+        validationDto.setCredentialFormat("vc+sd-jwt");
+        validationDto.setVcTemplate("some_template");
+        validationDto.setSdJwtVct("test-vct");
+        validationDto.setSignatureAlgo("ES256");
+        validationDto.setCredentialConfigKeyId("test-credential");
+        validationDto.setCredentialStatusPurposes(null); // Ensure this is not null to avoid NPE
+
+        // Mock the mapper methods
+        when(credentialConfigMapper.toDto(any(CredentialConfig.class))).thenReturn(validationDto);
         doNothing().when(credentialConfigMapper).updateEntityFromDto(any(CredentialConfigurationDTO.class), any(CredentialConfig.class));
-
-
-        when(credentialConfigRepository.save(any(CredentialConfig.class)))
-                .thenReturn(mockCredentialConfig); // Return the prepared mockCredentialConfig
+        when(credentialConfigRepository.save(any(CredentialConfig.class))).thenReturn(mockCredentialConfig);
 
         // --- Act ---
         CredentialConfigResponse credentialConfigResponse = credentialConfigurationService.updateCredentialConfiguration(expectedId, mockDto);
@@ -437,11 +449,11 @@ public class CredentialConfigurationServiceImplTest {
         mdocDTO.setCredentialFormat("mso_mdoc");
         mdocDTO.setCredentialConfigKeyId("mdoc-credential");
         mdocDTO.setDocType("docType1");
+        mdocDTO.setVcTemplate("mdoc_template");
+        mdocDTO.setSignatureCryptoSuite("Ed25519Signature2020"); // required
 
         when(credentialConfigMapper.toEntity(any(CredentialConfigurationDTO.class))).thenReturn(mdocConfig);
         when(credentialConfigRepository.save(any(CredentialConfig.class))).thenReturn(mdocConfig);
-
-        // Mock validator static methods if needed, or ensure they return true/false as per your setup
 
         CredentialConfigResponse response = credentialConfigurationService.addCredentialConfiguration(mdocDTO);
 
@@ -464,11 +476,13 @@ public class CredentialConfigurationServiceImplTest {
         CredentialConfigurationDTO sdJwtDTO = new CredentialConfigurationDTO();
         sdJwtDTO.setCredentialFormat("vc+sd-jwt");
         sdJwtDTO.setCredentialConfigKeyId("sdjwt-credential");
+        sdJwtDTO.setVcTemplate("sd_jwt_template");
+        sdJwtDTO.setSdJwtVct("test-vct"); // required
+        sdJwtDTO.setSignatureAlgo("ES256"); // required
 
         when(credentialConfigMapper.toEntity(any(CredentialConfigurationDTO.class))).thenReturn(sdJwtConfig);
         when(credentialConfigRepository.save(any(CredentialConfig.class))).thenReturn(sdJwtConfig);
 
-        // Mock validator static methods if needed, or ensure they return true/false as per your setup
 
         CredentialConfigResponse response = credentialConfigurationService.addCredentialConfiguration(sdJwtDTO);
 
@@ -479,14 +493,13 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void validateCredentialConfiguration_LdpVc_Invalid_ThrowsException() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("ldp_vc");
-        config.setVcTemplate("test_template");
-        // Simulate invalid config
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc");
+        dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
-            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(config)).thenReturn(false);
+            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(false);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
             );
             assertEquals("Context, credentialType and signatureCryptoSuite are mandatory for ldp_vc format", ex.getMessage());
         }
@@ -494,14 +507,14 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void validateCredentialConfiguration_LdpVc_Duplicate_ThrowsException() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("ldp_vc");
-        config.setVcTemplate("test_template");
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc");
+        dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
-            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
-            mocked.when(() -> LdpVcCredentialConfigValidator.isConfigAlreadyPresent(eq(config), any())).thenReturn(true);
+            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
+            mocked.when(() -> LdpVcCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(true);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
             );
             assertEquals("Configuration already exists for the given context and credentialType", ex.getMessage());
         }
@@ -509,13 +522,13 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void validateCredentialConfiguration_MsoMdoc_Invalid_ThrowsException() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("mso_mdoc");
-        config.setVcTemplate("test_template");
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("mso_mdoc");
+        dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(MsoMdocCredentialConfigValidator.class)) {
-            mocked.when(() -> MsoMdocCredentialConfigValidator.isValidCheck(config)).thenReturn(false);
+            mocked.when(() -> MsoMdocCredentialConfigValidator.isValidCheck(dto)).thenReturn(false);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
             );
             assertEquals("Doctype and signatureCryptoSuite fields are mandatory for mso_mdoc format", ex.getMessage());
         }
@@ -523,14 +536,14 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void validateCredentialConfiguration_MsoMdoc_Duplicate_ThrowsException() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("mso_mdoc");
-        config.setVcTemplate("test_template");
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("mso_mdoc");
+        dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(MsoMdocCredentialConfigValidator.class)) {
-            mocked.when(() -> MsoMdocCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
-            mocked.when(() -> MsoMdocCredentialConfigValidator.isConfigAlreadyPresent(eq(config), any())).thenReturn(true);
+            mocked.when(() -> MsoMdocCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
+            mocked.when(() -> MsoMdocCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(true);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
             );
             assertEquals("Configuration already exists for the given doctype", ex.getMessage());
         }
@@ -538,13 +551,13 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void validateCredentialConfiguration_SdJwt_Invalid_ThrowsException() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("vc+sd-jwt");
-        config.setVcTemplate("test_template");
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("vc+sd-jwt");
+        dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(SdJwtCredentialConfigValidator.class)) {
-            mocked.when(() -> SdJwtCredentialConfigValidator.isValidCheck(config)).thenReturn(false);
+            mocked.when(() -> SdJwtCredentialConfigValidator.isValidCheck(dto)).thenReturn(false);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config,true)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
             );
             assertEquals("Vct and signatureAlgo fields are mandatory for vc+sd-jwt format", ex.getMessage());
         }
@@ -552,44 +565,31 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void validateCredentialConfiguration_SdJwt_Duplicate_ThrowsException() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("vc+sd-jwt");
-        config.setVcTemplate("test_template");
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("vc+sd-jwt");
+        dto.setVcTemplate("test_template");
         try (var mocked = org.mockito.Mockito.mockStatic(SdJwtCredentialConfigValidator.class)) {
-            mocked.when(() -> SdJwtCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
-            mocked.when(() -> SdJwtCredentialConfigValidator.isConfigAlreadyPresent(eq(config), any())).thenReturn(true);
+            mocked.when(() -> SdJwtCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
+            mocked.when(() -> SdJwtCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(true);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
             );
             assertEquals("Configuration already exists for the given vct", ex.getMessage());
         }
     }
 
     @Test
-    public void validateCredentialConfiguration_UnsupportedFormat_ThrowsException() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("unsupported_format");
-        config.setVcTemplate("test_template");
-        CertifyException ex = assertThrows(CertifyException.class, () ->
-                ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, false)
-        );
-        assertEquals("Unsupported format: unsupported_format", ex.getMessage());
-    }
-
-    @Test
     public void validateCredentialConfiguration_LdpVc_MissingSignatureAlgo_ThrowsException() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("ldp_vc");
-        config.setVcTemplate("test_template");
-        config.setSignatureCryptoSuite("ecdsa-rdfc-2019");
-        config.setSignatureAlgo("");
-
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc");
+        dto.setVcTemplate("test_template");
+        dto.setSignatureCryptoSuite("ecdsa-rdfc-2019");
+        dto.setSignatureAlgo("");
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
-            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
-            mocked.when(() -> LdpVcCredentialConfigValidator.isConfigAlreadyPresent(eq(config), any())).thenReturn(false);
-
+            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
+            mocked.when(() -> LdpVcCredentialConfigValidator.isConfigAlreadyPresent(eq(dto), any())).thenReturn(false);
             CertifyException ex = assertThrows(CertifyException.class, () ->
-                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
+                    ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
             );
             assertEquals("Signature algorithm is mandatory for the provided crypto suite: ecdsa-rdfc-2019", ex.getMessage());
         }
@@ -597,118 +597,114 @@ public class CredentialConfigurationServiceImplTest {
 
     @Test
     public void validateCredentialConfiguration_MultipleCredentialStatusPurposes_ThrowsException() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("ldp_vc");
-        config.setVcTemplate("test_template");
-        config.setCredentialStatusPurposes(List.of("purpose1", "purpose2"));
-
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc");
+        dto.setVcTemplate("test_template");
+        dto.setCredentialStatusPurposes(List.of("purpose1", "purpose2"));
         ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1"));
-
         CertifyException ex = assertThrows(CertifyException.class, () ->
-                ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
+                ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
         );
         assertEquals("Multiple credential status purposes are not currently supported.", ex.getMessage());
     }
 
     @Test
     public void validateCredentialConfiguration_InvalidCredentialStatusPurpose_ThrowsException() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("ldp_vc");
-        config.setVcTemplate("test_template");
-        config.setCredentialStatusPurposes(List.of("invalid_purpose"));
-
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc");
+        dto.setVcTemplate("test_template");
+        dto.setCredentialStatusPurposes(List.of("invalid_purpose"));
         ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
-
         CertifyException ex = assertThrows(CertifyException.class, () ->
-                ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true)
+                ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true)
         );
         assertEquals("Invalid credential status purposes. Allowed values are: [purpose1, purpose2]", ex.getMessage());
     }
 
     @Test
     public void validateCredentialConfiguration_NullCredentialStatusPurposes_AllowsConfig() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("ldp_vc");
-        config.setVcTemplate("test_template");
-        config.setCredentialStatusPurposes(null);
-        config.setContext("https://www.w3.org/2018/credentials/v1");
-        config.setCredentialType("VerifiableCredential");
-        config.setSignatureCryptoSuite("Ed25519Signature2020");
-        config.setKeyManagerAppId("TEST2019");
-        config.setKeyManagerRefId("TEST2019-REF");
-
-
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc");
+        dto.setVcTemplate("test_template");
+        dto.setCredentialStatusPurposes(null);
+        dto.setContextURLs(List.of("https://www.w3.org/2018/credentials/v1"));
+        dto.setCredentialTypes(List.of("VerifiableCredential"));
+        dto.setSignatureCryptoSuite("Ed25519Signature2020");
+        dto.setKeyManagerAppId("TEST2019");
+        dto.setKeyManagerRefId("TEST2019-REF");
         ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
-
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
-            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
-            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true);
+            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
+            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true);
         }
     }
 
     @Test
     public void validateCredentialConfiguration_EmptyCredentialStatusPurposes_AllowsConfig() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("ldp_vc");
-        config.setVcTemplate("test_template");
-        config.setCredentialStatusPurposes(Collections.emptyList());
-        config.setContext("https://www.w3.org/2018/credentials/v1");
-        config.setCredentialType("VerifiableCredential");
-        config.setSignatureCryptoSuite("Ed25519Signature2020");
-        config.setKeyManagerAppId("TEST2019");
-        config.setKeyManagerRefId("TEST2019-REF");
-
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc");
+        dto.setVcTemplate("test_template");
+        dto.setCredentialStatusPurposes(Collections.emptyList());
+        dto.setContextURLs(List.of("https://www.w3.org/2018/credentials/v1"));
+        dto.setCredentialTypes(List.of("VerifiableCredential"));
+        dto.setSignatureCryptoSuite("Ed25519Signature2020");
+        dto.setKeyManagerAppId("TEST2019");
+        dto.setKeyManagerRefId("TEST2019-REF");
         ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
-
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
-            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
-            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true);
+            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
+            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true);
         }
     }
 
     @Test
     public void validateCredentialConfiguration_ValidSingleCredentialStatusPurpose_Succeeds() {
-        CredentialConfig config = new CredentialConfig();
-        config.setCredentialFormat("ldp_vc");
-        config.setVcTemplate("test_template");
-        config.setCredentialStatusPurposes(List.of("purpose1"));
-        config.setContext("https://www.w3.org/2018/credentials/v1");
-        config.setCredentialType("VerifiableCredential");
-        config.setSignatureCryptoSuite("Ed25519Signature2020");
-        config.setKeyManagerAppId("TEST2019");
-        config.setKeyManagerRefId("TEST2019-REF");
-
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc");
+        dto.setVcTemplate("test_template");
+        dto.setCredentialStatusPurposes(List.of("purpose1"));
+        dto.setContextURLs(List.of("https://www.w3.org/2018/credentials/v1"));
+        dto.setCredentialTypes(List.of("VerifiableCredential"));
+        dto.setSignatureCryptoSuite("Ed25519Signature2020");
+        dto.setKeyManagerAppId("TEST2019");
+        dto.setKeyManagerRefId("TEST2019-REF");
         ReflectionTestUtils.setField(credentialConfigurationService, "allowedCredentialStatusPurposes", List.of("purpose1", "purpose2"));
-
         try (var mocked = org.mockito.Mockito.mockStatic(LdpVcCredentialConfigValidator.class)) {
-            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(config)).thenReturn(true);
-            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", config, true);
+            mocked.when(() -> LdpVcCredentialConfigValidator.isValidCheck(dto)).thenReturn(true);
+            ReflectionTestUtils.invokeMethod(credentialConfigurationService, "validateCredentialConfiguration", dto, true);
         }
     }
 
     @Test
     public void validateKeyAliasMapperConfiguration_KeyAliasListIsNull_ThrowsException() {
-        credentialConfig.setSignatureCryptoSuite("RsaSignature2018");
-        // Arrange
-        when(credentialConfigMapper.toEntity(any(CredentialConfigurationDTO.class))).thenReturn(credentialConfig);
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc"); // Required to avoid NPE in switch statement
+        dto.setContextURLs(List.of("https://www.w3.org/2018/credentials/v1"));
+        dto.setCredentialTypes(List.of("VerifiableCredential", "TestVerifiableCredential"));
+        dto.setSignatureCryptoSuite("RsaSignature2018");
+        dto.setVcTemplate("test_template");
 
         // Act & Assert
         CertifyException exception = assertThrows(CertifyException.class, () ->
-                credentialConfigurationService.addCredentialConfiguration(credentialConfigurationDTO)
+                credentialConfigurationService.addCredentialConfiguration(dto)
         );
         assertEquals("No key chooser configuration found for the signature crypto suite: RsaSignature2018", exception.getMessage());
     }
 
     @Test
     public void validateKeyAliasMpperConfiguration_NoMatchingAppIdAndRefId_ThrowsException() {
-        // Arrange
-        credentialConfig.setKeyManagerAppId("appId");
-        credentialConfig.setKeyManagerRefId("refId");
-        when(credentialConfigMapper.toEntity(any(CredentialConfigurationDTO.class))).thenReturn(credentialConfig);
+        CredentialConfigurationDTO dto = new CredentialConfigurationDTO();
+        dto.setCredentialFormat("ldp_vc"); // Required to avoid NPE in switch statement
+        dto.setContextURLs(List.of("https://www.w3.org/2018/credentials/v1"));
+        dto.setCredentialTypes(List.of("VerifiableCredential", "TestVerifiableCredential"));
+        dto.setSignatureCryptoSuite("Ed25519Signature2020");
+        dto.setKeyManagerAppId("appId");
+        dto.setKeyManagerRefId("refId");
+        dto.setVcTemplate("test_template");
 
         // Act & Assert
         CertifyException exception = assertThrows(CertifyException.class, () ->
-                credentialConfigurationService.addCredentialConfiguration(credentialConfigurationDTO)
+                credentialConfigurationService.addCredentialConfiguration(dto)
         );
         assertEquals("No matching appId and refId found in the key chooser list.", exception.getMessage());
     }
